--- a/pages/style.css
+++ b/pages/style.css
@@ -15,14 +15,22 @@ body {
   padding-right: 100px;
 }
 
+.card-cont {
+  padding: 0;
+  margin: auto;
+}
+
 .card {
-  width: 50%;
+  width: 75%;
+  height: 50%;
   margin: auto;
   top: 0;
   bottom: 0;
   background-color: #81A684;
   color: white;
   margin-top: 50px;
+  margin-bottom: 50px;
+  text-align: center;
 }
 
 .center {
